syntax = "proto3";

import "Protos/organization.proto";
import "Protos/locality.proto";
import "Protos/application.proto";
import "Protos/Animal.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "PIS_GrpcService.PIS_GrpcService";

service GrpcCaptureActService {
  rpc GetAll(Empty) returns (CaptureActArray);
  rpc Add(GrpcCaptureAct) returns (Empty);
  rpc Get(IdRequest) returns (GrpcCaptureAct);
  rpc Edit(GrpcCaptureAct) returns (Empty);
  rpc Delete(IdRequest) returns (Empty);
}

message GrpcCaptureAct {
	int32 Id = 1;
	google.protobuf.Timestamp ActDate = 2;
	GrpcAnimal CapturedAnimal = 3;
	int32 Amount = 4;
	string Performer = 5;
	GrpcOrganization Customer = 6;
	LocalityArray Localities = 7;
	ApplicationArray Applications = 8;
}

message CaptureActArray {
	repeated GrpcCaptureAct list = 1;
}